--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -19,6 +19,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Deploy
-        run: git fetch --prune --no-tags --unshallow
+        run: git fetch --prune --no-tags
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
